# poker-ai

./: .gitignore  Cargo.toml  README.md  poker-ai-plan-v2.md  poker-ai-plan-v3.md
crates/poker-ai/: Cargo.toml
crates/poker-ai/examples/: bench_continual.rs  bench_ochs.rs  inspect_buckets.rs
crates/poker-ai/src/: lib.rs
crates/poker-ai/src/abstraction/: bucket_map.rs  canonical.rs  clustering.rs  equity_cache.rs  features.rs  hand_index.rs  mod.rs
crates/poker-ai/src/evaluation/: aivat.rs  exploitability.rs  local_br.rs  metrics.rs  mod.rs  self_play.rs  vector_br.rs
crates/poker-ai/src/games/: blueprint.rs  kuhn.rs  leduc.rs  mod.rs  nlhe.rs  push_fold.rs
crates/poker-ai/src/play/: bot.rs  cards.rs  equity.rs  luck.rs  mod.rs  policy.rs  protocol.rs  slumbot.rs  tracker.rs
crates/poker-ai/src/resolving/: belief_state.rs  cfv.rs  continual.rs  gadget.rs  leaf_eval.rs  mod.rs  subgame.rs  vector_cfr.rs  warm_start.rs
crates/poker-ai/src/solver/: best_response.rs  cfr.rs  dcfr.rs  lean_table.rs  mccfr.rs  mod.rs  optimistic.rs  predictive.rs  pruning.rs  regret_table.rs  sampling.rs
crates/poker-ai/src/solver/mccfr/: atomic.rs  cursor.rs  mod.rs  parallel.rs  soa.rs  tests.rs
crates/poker-ai/src/util/: combos.rs  hash.rs  mod.rs  rng.rs
crates/poker-core/: Cargo.toml  build.rs
docs/: abstraction.md  action-abstraction.md  architecture.md  cfr-notes.md  experiments.md  memory-budget.md  options.md  poker-core-deep-dive.md
scripts/: analyze_buckets.py  analyze_slumbot.py  desync_audit.py  plot_convergence.py  run_tournament.sh  train_wandb.py
(+8 files in other folders)
