[package]
name = "poker-ai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "cluster"
path = "src/bin/cluster.rs"

[[bin]]
name = "memory_estimate"
path = "src/bin/memory_estimate.rs"

[[bin]]
name = "play"
path = "src/bin/play.rs"

[dependencies]
poker-core = { path = "../poker-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rayon = "1"
ureq = "2"
